--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="stat-card p-8 space-y-6">
                 <i data-lucide="globe" class="text-blue-500 w-8 h-8"></i>
                 <h3 class="text-white font-bold mono text-xs uppercase tracking-widest">Global_Nodes</h3>
-                <p class="text-xs leading-relaxed text-slate-500">Decentralized synthesis facilities in Irvine and Singapore ensuring absolute supply chain integrity.</p>
+                <p class="text-xs leading-relaxed text-slate-500">Decentralized synthesis facilities in Irvine, Monument, Helsinki and Singapore ensuring absolute supply chain integrity.</p>
             </div>
             <div class="stat-card p-8 space-y-6">
                 <i data-lucide="bar-chart-3" class="text-blue-500 w-8 h-8"></i>
