--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <span class="text-[9px] font-bold tracking-[0.4em]">SECURE_VDR</span>
         </div>
         <p class="text-[10px] text-slate-700 tracking-[0.4em] uppercase font-bold">
-            Monument Labs Systems // Advanced Human Infrastructure
+            Monument Labs LLC // Advanced Human Infrastructure
         </p>
     </footer>
     <script>
