--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <span class="text-blue-600 italic">Continuity.</span>
                 </h2>
                 <p class="text-lg text-slate-400 leading-relaxed max-w-lg">
-                    We bridge the Biological Maintenance Gap. Monument integrates Katin Synthesis with predictive Norvoc AI to provide an institutional-grade operating system for human healthspan.
+                    Monument Labs bridges the infrastructure gap in human biology, unifying predictive intelligence and precision synthesis into an institutional-grade operating system for human healthspan.
                 </p>
                 <div class="flex gap-4">
                     <button class="bg-blue-600 hover:bg-blue-500 text-white px-10 py-5 rounded-sm font-bold mono uppercase tracking-widest transition-all shadow-lg shadow-blue-500/20">Initialize Sync</button>
