--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="hidden md:flex gap-8 text-[10px] mono uppercase tracking-widest font-bold text-slate-500">
-                <span class="flex items-center gap-2"><span class="w-1.5 h-1.5 rounded-full bg-blue-500 animate-pulse"></span> Node_Singapore: Active</span>
+                <span class="flex items-center gap-2"><span class="w-1.5 h-1.5 rounded-full bg-blue-500 animate-pulse"></span> Node_Helsinki: Active</span>
                 <span class="text-slate-700">|</span>
                 <a href="#science" class="hover:text-blue-400 transition-colors">VDR_Access</a>
             </div>
@@ -50,11 +50,11 @@
             <div class="space-y-10">
                 <div class="inline-flex items-center gap-2 px-3 py-1 rounded border border-blue-500/20 bg-blue-500/5">
                     <i data-lucide="activity" class="w-4 h-4 text-blue-500"></i>
-                    <span class="text-[10px] mono uppercase text-blue-400 font-bold tracking-widest">Powered by Norvoc Core AI</span>
+                    <span class="text-[10px] mono uppercase text-blue-400 font-bold tracking-widest">Powered by Norvoc Intelligence</span>
                 </div>
                 <h2 class="text-7xl font-black text-white tracking-tighter leading-[1.0] text-gradient">
-                    Architecture for <br>
-                    <span class="text-blue-600 italic">Continuity.</span>
+                    Infrastructure for<br>
+                    <span class="text-blue-600 italic">Permanence.</span>
                 </h2>
                 <p class="text-lg text-slate-400 leading-relaxed max-w-lg">
                     Monument Labs bridges the infrastructure gap in human biology, unifying predictive intelligence and precision synthesis into an institutional-grade operating system for human healthspan.
